--- a/Translations/German/text-effectPlayer-change.xml
+++ b/Translations/German/text-effectPlayer-change.xml
@@ -55,66 +55,6 @@
 		<Translation>Der Große</Translation>
 	</Entry>
   <Entry>
-    <zType>TEXT_EFFECTPLAYER_IMPROVEMENT_PYRAMIDS</zType>
-    <Translation>Die Pyramiden von Gizeh</Translation>
-  </Entry>
-  <Entry>
-    <zType>TEXT_EFFECTPLAYER_IMPROVEMENT_GREAT_ZIGGURAT</zType>
-    <Translation>Die Zikkurat des Mondgottes Nanna</Translation>
-  </Entry>
-  <Entry>
-		<zType>TEXT_EFFECTPLAYER_IMPROVEMENT_ORACLE</zType>
-		<Translation>Das Orakel von Delphi</Translation>
-	</Entry>
-	<Entry>
-		<zType>TEXT_EFFECTPLAYER_IMPROVEMENT_HANGING_GARDENS</zType>
-		<Translation>Die Hängenden Gärten der Semiramis</Translation>
-	</Entry>
-  <Entry>
-    <zType>TEXT_EFFECTPLAYER_IMPROVEMENT_NECROPOLIS</zType>
-    <Translation>Die Totenstadt</Translation>
-  </Entry>
-  <Entry>
-		<zType>TEXT_EFFECTPLAYER_IMPROVEMENT_LIGHTHOUSE</zType>
-		<Translation>Der Pharos von Alexandria</Translation>
-	</Entry>
-	<Entry>
-		<zType>TEXT_EFFECTPLAYER_IMPROVEMENT_APADANA</zType>
-		<Translation>Der Apadana in Persepolis</Translation>
-	</Entry>
-  <Entry>
-    <zType>TEXT_EFFECTPLAYER_IMPROVEMENT_MAUSOLEUM</zType>
-    <Translation>Das Grab des Königs Mausolos II.</Translation>
-  </Entry>
-  <Entry>
-		<zType>TEXT_EFFECTPLAYER_IMPROVEMENT_ACROPOLIS</zType>
-		<Translation>Die Akropolis in Athen</Translation>
-	</Entry>
-	<Entry>
-		<zType>TEXT_EFFECTPLAYER_IMPROVEMENT_COLOSSUS</zType>
-		<Translation>Der Koloss von Rhodos</Translation>
-	</Entry>
-	<Entry>
-		<zType>TEXT_EFFECTPLAYER_IMPROVEMENT_MUSAEUM</zType>
-		<Translation>Das Musaeum in Alexandria</Translation>
-	</Entry>
-	<Entry>
-		<zType>TEXT_EFFECTPLAYER_IMPROVEMENT_CIRCUS_MAXIMUS</zType>
-		<Translation>Der Circus Maximus</Translation>
-	</Entry>
-  <Entry>
-    <zType>TEXT_EFFECTPLAYER_IMPROVEMENT_PANTHEON</zType>
-    <Translation>Das Pantheon</Translation>
-  </Entry>
-  <Entry>
-    <zType>TEXT_EFFECTPLAYER_IMPROVEMENT_HAGIA_SOPHIA</zType>
-    <Translation>Die Hagia Sophia</Translation>
-  </Entry>
-  <Entry>
-    <zType>TEXT_EFFECTPLAYER_IMPROVEMENT_GRAND_BAZAAR</zType>
-    <Translation>Der Große Basar</Translation>
-  </Entry>
-  <Entry>
 		<zType>TEXT_EFFECTPLAYER_LAW_EPICS</zType>
 		<Translation>Anforderungen</Translation>
 	</Entry>
@@ -207,8 +147,8 @@
 		<Translation>Schönschrift</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_EFFECTPLAYER_LAW_ASCETICISM</zType>
-		<Translation>Askese</Translation>
+		<zType>TEXT_EFFECTPLAYER_LAW_PILGRIMAGE</zType>
+		<Translation>Pilgerschaft</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTPLAYER_LAW_HOLY_WAR</zType>
@@ -243,72 +183,12 @@
 		<Translation>Münzreform</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_EFFECTPLAYER_NATION_ASSYRIA</zType>
-		<Translation>Assyrien</Translation>
-	</Entry>
-	<Entry>
-		<zType>TEXT_EFFECTPLAYER_NATION_BABYLONIA</zType>
-		<Translation>Babylonien</Translation>
-	</Entry>
-	<Entry>
-		<zType>TEXT_EFFECTPLAYER_NATION_CARTHAGE</zType>
-		<Translation>Karthago</Translation>
-	</Entry>
-	<Entry>
-		<zType>TEXT_EFFECTPLAYER_NATION_EGYPT</zType>
-		<Translation>Ägypten</Translation>
-	</Entry>
-	<Entry>
-		<zType>TEXT_EFFECTPLAYER_NATION_GREECE</zType>
-		<Translation>Griechenland</Translation>
-	</Entry>
-	<Entry>
-		<zType>TEXT_EFFECTPLAYER_NATION_GREECE_OLYMPICS</zType>
-		<Translation>Olympische Spiele</Translation>
-	</Entry>
-	<Entry>
-		<zType>TEXT_EFFECTPLAYER_NATION_ROME</zType>
-		<Translation>Rom</Translation>
-	</Entry>
-	<Entry>
-		<zType>TEXT_EFFECTPLAYER_NATION_PERSIA</zType>
-		<Translation>Persien</Translation>
-	</Entry>
-	<Entry>
-		<zType>TEXT_EFFECTPLAYER_RELIGION_JUDAISM</zType>
-		<Translation>Mythologie</Translation>
-	</Entry>
-	<Entry>
-		<zType>TEXT_EFFECTPLAYER_RELIGION_ZOROASTRIANISM</zType>
-		<Translation>Zarathustrismus</Translation>
-	</Entry>
-	<Entry>
-		<zType>TEXT_EFFECTPLAYER_RELIGION_CHRISTIANITY</zType>
-		<Translation>Christentum</Translation>
-	</Entry>
-	<Entry>
-		<zType>TEXT_EFFECTPLAYER_RELIGION_MANICHAEISM</zType>
-		<Translation>Manichäismus</Translation>
-	</Entry>
-	<Entry>
 		<zType>TEXT_EFFECTPLAYER_TECH_LABOR_FORCE</zType>
 		<Translation>Straßen</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTPLAYER_TECH_DRAMA</zType>
 		<Translation>Musik</Translation>
-	</Entry>
-	<Entry>
-		<zType>TEXT_EFFECTPLAYER_TECH_POLITICAL_REFORM</zType>
-		<Translation>Politische Reformen</Translation>
-	</Entry>
-	<Entry>
-		<zType>TEXT_EFFECTPLAYER_TECH_MILITARY_REFORM</zType>
-		<Translation>Militärische Reformen</Translation>
-	</Entry>
-	<Entry>
-		<zType>TEXT_EFFECTPLAYER_TECH_ECONOMIC_REFORM</zType>
-		<Translation>Wirtschaftliche Reformen</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTPLAYER_TRAIT_TACTICIAN_ARCHETYPE</zType>
@@ -328,7 +208,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTPLAYER_TRAIT_SCHOLAR_ARCHETYPE_INQUIRY</zType>
-		<Translation>Prüfer in der Hauptstadt</Translation>
+		<Translation>Forscher in der Hauptstadt</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTPLAYER_TRAIT_BUILDER_ARCHETYPE</zType>
@@ -353,30 +233,6 @@
 	<Entry>
 		<zType>TEXT_EFFECTPLAYER_TRAIT_HERO_ARCHETYPE</zType>
 		<Translation>Wortführer der Helden</Translation>
-	</Entry>
-	<Entry>
-		<zType>TEXT_EFFECTPLAYER_TRAIT_MISERABLE</zType>
-		<Translation>Unglücklich</Translation>
-	</Entry>
-	<Entry>
-		<zType>TEXT_EFFECTPLAYER_TRAIT_DRUNK</zType>
-		<Translation>Säufer</Translation>
-	</Entry>
-	<Entry>
-		<zType>TEXT_EFFECTPLAYER_TRAIT_ROMANTIC</zType>
-		<Translation>Romantisch</Translation>
-	</Entry>
-	<Entry>
-		<zType>TEXT_EFFECTPLAYER_TRAIT_MOURNING</zType>
-		<Translation>Trauernd</Translation>
-	</Entry>
-	<Entry>
-		<zType>TEXT_EFFECTPLAYER_TRAIT_CUNNING</zType>
-		<Translation>Gerissen</Translation>
-	</Entry>
-	<Entry>
-		<zType>TEXT_EFFECTPLAYER_TRAIT_SOLDIER</zType>
-		<Translation>Krieger</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTPLAYER_UPKEEP_LOW_CIVICS</zType>
